[package]
name = "barnes_hut"
version = "1.0.5"
authors = ["David O'Connor <the_alchemist@fastmail.com>"]
description = "Fast n-body simluation using the Barnes Hut algorithm"
keywords = ["n-body", "cosmology", "chemistry", "barnes"]
categories = [
    "algorithms",
    "mathematics",
    "science",
    "algorithms",
]
repository = "https://github.com/David-OConnor/barnes_hut"
documentation = "https://docs.rs/barnes_hut"
readme = "README.md"
license = "MIT"
exclude = [".gitignore"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#lin_alg = "^1.0.4"
lin_alg = { path="../lin_alg" }
rayon = "^1.10.0"
bincode = { version = "^2.0.0-rc.3", optional = true }

[features]
encode = ["bincode"]