[package]
name = "barnes_hut"
version = "1.0.7"
edition = "2024"
authors = ["David O'Connor <the_alchemist@fastmail.com>"]
description = "Fast n-body simluation using the Barnes Hut algorithm"
keywords = ["n-body", "cosmology", "chemistry", "barnes"]
categories = [
    "algorithms",
    "mathematics",
    "science",
    "algorithms",
]
repository = "https://github.com/David-OConnor/barnes_hut"
documentation = "https://docs.rs/barnes_hut"
readme = "README.md"
license = "MIT"
exclude = [".gitignore"]


[dependencies]
#lin_alg = "^1.0.8"
lin_alg = { path="../lin_alg" }
rayon = "^1.10.0"
bincode = { version = "^2.0.0-rc.3", optional = true }

[features]
encode = ["bincode", "lin_alg/encode"]